[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/LevelCore.gd" type="Script" id=1]
[ext_resource path="res://Menus/SuccessMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/AstronautHandler.gd" type="Script" id=4]
[ext_resource path="res://Levels/AstronautCamera.gd" type="Script" id=5]

[node name="LevelCore" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="GUI" instance=ExtResource( 3 )]
visible = false

[node name="SuccessMenu" parent="GUI" instance=ExtResource( 2 )]
visible = false

[node name="AstronautCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 5 )

[node name="AstronautHandler" type="Node2D" parent="."]
script = ExtResource( 4 )
